--- a/udp_server/Makefile
+++ b/udp_server/Makefile
@@ -1,14 +1,15 @@
 .PHONY:all 
-all:udp-client udp-server 	
+all:udp_client udp_server 	
 
-udp-client:udp-client.cc 
-	g++ -o $@ $^
-udp-server:udp-server.cc 
-	g++ -o $@ $^
+udp_client:udp_client.cc 
+	g++ -o $@ $^ -std=c++11
+	
+udp_server:udp_server.cc 
+	g++ -o $@ $^ -std=c++11
 
 .PHONY:clean
 clean:
-	rm -f udp-client udp-server 
+	rm -f udp_client udp_server 
 
 
 
